Changes file for DateTime::Incomplete

- can_be_datetime()
- has_date(), has_time()
- defined_fields() method, contributed by Rick Measham
- to_datetime() sets fields in a known order,
  instead of hash-order.  Based on a patch by Rick Measham
- Included has() method, contributed by Rick Measham


0.0101  2003-11-03
- runs in Perl 5.00503.  
  Dave Rolsky & Flavio S. Glock, creating a cvs conflict :)
- there is no set_locale() in DateTime.   
  Modified from a patch by Rick Measham
- fixed an infinite loop in _format_nanoseconds.   
  Patch by Rick Measham

0.01  2003-11-01
- documentation revision, by Dave Rolsky
- documented the error handling: mutators die / accesors return undef
- from_day_of_year does not define "time" by default
- DateTime methods:
 epoch hires_epoch is_dst utc_rd_values utc_rd_as_seconds local_rd_as_seconds 
- "Storable" hooks
- "contains" takes the time_zone into account
- fixed "strftime" of incomplete datetimes, epoch

0.00_07  2003-07-25
- set_time_zone / set_locale test for undef args
- strftime
- time_zone_long_name
- today / now / from_epoch / from_object / from_day_of_year

0.00_06  2003-07-25
- DateTime methods:
 week week_year week_number week_of_month day_name day_abbr day_of_week wday dow day_of_year doy quarter day_of_quarter doq weekday_of_month jd mjd is_leap_year ce_year era year_with_era last_day_of_month month_name month_abbr hour_1 hour_12 hour_12_0 fractional_second millisecond microsecond offset time_zone_short_name
- base_class / has_base
- added example on how to use "truncate" to generate smaller
  recurrence sets.

0.00_05  2003-07-24
- next/previous "february" problem fixed.
- set( day => undef ) would break if there was a base date.
  Reported by Dave Rolsky
- t/02incomplete.t SKIPs tests properly, when DT::Recurrence
  is not installed
- locale, set_locale
- some aliases added, for DateTime compatibility

0.00_04  2003-07-22
-  base
-  next / previous / closest
-  has_hour, has_month, ...
-  has(), get()
