@@ -2,7 +2,7 @@
 
 use strict;
 
-use Test::More tests => 44;
+use Test::More tests => 46;
 use DateTime;
 use DateTime::Incomplete;
 
@@ -143,8 +143,14 @@ my $UNDEF2 = $UNDEF_CHAR x 2;
       $dt->set( second => undef );
       is( $dt->can_be_datetime, 1, 'can be datetime' );
 
+      is( $dt->become_datetime->datetime, '2003-01-01T00:00:00',
+          'be datetime' );
+
       $dt->set( month => undef );
       is( $dt->can_be_datetime, 0, 'can not be datetime' );
+
+      is( $dt->become_datetime->datetime, '2003-01-01T00:00:00',
+          'force to be datetime' );
     }
 
     # TESTS TODO:
